planet styling bug fixed no longer moves off screen

--- a/src/components/Planets/Mars/style.css
+++ b/src/components/Planets/Mars/style.css
@@ -12,7 +12,7 @@
     width: 2rem;
     height: 2rem;
     position: absolute;
-    top: 50%;
+    top: 77%;
     bottom: 0;
     left: 50%;
     right: 0;
@@ -46,5 +46,6 @@
 
 .mars:hover{
     cursor:pointer;
-    transform:scale(7)
+    transform:scale(7);
+    animation-play-state: paused;
 }
